--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,12 @@ ul{
 .weatherStatus{
   font-size: 1.3em;
 }
+.error{
+  font-size: 1.5em;
+  margin: 10% 0;
+  text-align: center;
+  line-height: 3em;
+}
 @media only screen and (max-width: 1000px) {
   button {
     margin: 0;
