--- a/src/App.css
+++ b/src/App.css
@@ -119,10 +119,10 @@ ul{
     font-size: 0.9em;
   }
   .currentWeather{
-    padding: 40px 0
+    padding: 30px 0
   }
   .forcast{
-    padding: 118px 0;
+    padding: 50px 0;
   }
 }
 @media only screen and (max-width: 400px) {
@@ -145,5 +145,12 @@ ul{
   }
   .currentWeather{
     padding: 20px 0;
+  }
+  .currentWeather img{
+    width: 150px;
+    height: 150px;   
+  }
+  .weatherTemperature{
+    font-size: 1.1em;
   }
 }
